--- a/.github/workflows/resume.yml
+++ b/.github/workflows/resume.yml
@@ -14,3 +14,4 @@ jobs:
         name: jebentier/resume
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+        workdir: resume
