Update resume image to latest version of resume-cli

--- a/resume/Dockerfile
+++ b/resume/Dockerfile
@@ -4,9 +4,14 @@ LABEL maintainer="jebentier@gmail.com"
 USER root
 
 RUN apk update && apk add --no-cache git && \
-    npm install -g --unsafe-perm resume-cli@1.2.7 yamljs jsonresume-theme-stackoverflow jsonresume-theme-onepage
+    npm install -g --unsafe-perm \
+        resume-cli \
+        yamljs \
+        jsonresume-theme-stackoverflow \
+        jsonresume-theme-onepage
 
 WORKDIR /resume
+RUN mkdir dist
 COPY resume.yml .
 
 COPY render_resume.sh /usr/local/bin
