Build docker image on main branch as well

--- a/.github/workflows/resume.yml
+++ b/.github/workflows/resume.yml
@@ -1,8 +1,9 @@
 name: Resume Docker Image Build
 on:
   push:
-    branches: 
+    branches:
     - master
+    - main
 jobs:
   build:
     runs-on: ubuntu-latest
