--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "style-loader": "^1.0.0",
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "^3.8.0"
+    "webpack-dev-server": "^3.8.0",
+    "yaml2json": "^1.0.2"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.7.4",
