--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "webpack": "^4.39.3",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0",
-    "yaml2json": "^1.0.2"
+    "yamljs": "^0.3.0"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.7.4",
