Updated elgohr/Publish-Docker-Github-Action to a supported version (v5)

--- a/.github/workflows/resume.yml
+++ b/.github/workflows/resume.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: "actions/checkout@v1"
     - name: Publish
-      uses: elgohr/Publish-Docker-Github-Action@master
+      uses: elgohr/Publish-Docker-Github-Action@v5
       with:
         name: jebentier/resume
         username: ${{ secrets.DOCKER_USERNAME }}
