--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,9 +10,9 @@ jobs:
     - uses: actions/checkout@master
     - uses: actions/setup-node@v2
       with:
-        node-version: '14'
-    - run: yarn install
-    - run: yarn build
+        node-version: '20'
+    - run: npm install
+    - run: npm build
     - uses: jakejarvis/s3-sync-action@master
       with:
         args: --acl public-read --follow-symlinks --delete
