--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,5 @@
 name: Deploy Website
-on:
-  push:
-    branches:
-    - main
+on: [push]
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -14,6 +11,7 @@ jobs:
     - run: npm install
     - run: npm build
     - uses: jakejarvis/s3-sync-action@master
+      if: github.ref == 'refs/heads/main'
       with:
         args: --acl public-read --follow-symlinks --delete
       env:
