--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,5 @@
 name: Deploy Website
-on:
-  push:
-    branches:
-    - main
+on: [push]
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -10,10 +7,11 @@ jobs:
     - uses: actions/checkout@master
     - uses: actions/setup-node@v2
       with:
-        node-version: '14'
-    - run: yarn install
-    - run: yarn build
+        node-version: '20'
+    - run: npm install
+    - run: npm run build
     - uses: jakejarvis/s3-sync-action@master
+      if: github.ref == 'refs/heads/main'
       with:
         args: --acl public-read --follow-symlinks --delete
       env:
