--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "rss": "^1.2.2",
     "sass": "^1.77.5",
     "typescript": "^4.9.5",
     "web-vitals": "^4.1.1"
@@ -25,6 +26,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build-rss": "bin/generate-rss-feeds.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
