Generate fresh RSS feed with each deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ jobs:
       with:
         node-version: '20'
     - run: npm install
+    - run: npm run build-rss
     - run: npm run build
     - uses: jakejarvis/s3-sync-action@master
       if: github.ref == 'refs/heads/main'
