--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fontsource/syncopate": "^5.0.19",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@tailwindcss/typography": "^0.5.13",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
